fix: now when open modals the page does not shift

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,3 +4,9 @@
 @plugin "daisyui" {
   themes: lofi --default, business --prefersdark;
 }
+
+@layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+}
